JS: - Fixed loadingState - Added Spinner component CSS: - fixed flexbox alignment between dataContainer and spinner to-do: add margin to spinner since the buttons disappear during loading

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .mainContainer {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   width: 100%;
   margin-top: 64px;
 }
@@ -30,4 +31,64 @@
   padding: 8px;
   border: 0;
   border-radius: 5px;
+}
+
+.totalCount {
+  margin-top: 28px;
+  padding: 8px;
+  font-weight: 400;
+  font-size: 22px;
+  text-align: center;
+}
+
+/* imported button */
+.button-51 {
+  margin: 22px;
+  padding: 8px;
+  background-color: transparent;
+  border: 1px solid #266db6;
+  box-sizing: border-box;
+  color: #00132c;
+  font-family: "Avenir Next LT W01 Bold", sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 24px;
+  padding: 16px 23px;
+  position: relative;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-51:hover,
+.button-51:active {
+  outline: 0;
+}
+
+.button-51:hover {
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.button-51:before {
+  background-color: #d5edf6;
+  content: "";
+  height: calc(100% + 3px);
+  position: absolute;
+  right: -7px;
+  top: -9px;
+  transition: background-color 300ms ease-in;
+  width: 100%;
+  z-index: -1;
+}
+
+.button-51:hover:before {
+  background-color: #6dcff6;
+}
+
+@media (min-width: 768px) {
+  .button-51 {
+    padding: 16px 32px;
+  }
 }
